src/test/ui/existential_types/bound_reduction2.stderr
error: defining existential type use does not fully define existential type
  --> $DIR/bound_reduction2.rs:17:1
   |
LL | / fn foo_desugared<T: TraitWithAssoc>(_: T) -> Foo<T::Assoc> {
LL | |     ()
LL | | }
   | |_^

error: could not find defining uses
  --> $DIR/bound_reduction2.rs:10:1
   |
LL | existential type Foo<V>: Trait<V>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

